feat: 优化页面结构, 调整首页关键词

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "LetoAi - AI已来，未来已来",
-  "short_name": "LetoAi",
-  "description": "LetoAi 将前沿人工智能技术与教育深度融合，为学生和教育工作者创造个性化、高效的学习体验。",
+  "name": "LetoAI - 国内领先的AI技术解决方案提供商",
+  "short_name": "LetoAI",
+  "description": "LetoAI是国内领先的AI技术解决方案提供商，专注AI营销、AI教育、全球AI工具三大领域，助力企业数字化转型。",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
